<resources>
    <string name="app_name">औषधि रिमाइन्डर</string>
    <string name="add_medicine">औषधि थप्नुहोस्</string>
    <string name="view_history">इतिहास हेर्नुहोस्</string>
    <string name="medicine_name">औषधिको नाम</string>
    <string name="dosage">खुराक</string>
    <string name="total_stock">कुल स्टक (ट्याब्लेट वा मिलि)</string>
    <string name="daily_consumption">दैनिक खपत (ट्याब्लेट वा मिलि)</string>
    <string name="save">सेभ गर्नुहोस्</string>
    <string name="history">औषधि इतिहास</string>
    <string name="snooze">पर्ख</string>
    <string name="confirm">लियें</string>
    <string name="edit_medicine">औषधि सम्पादन गर्नुहोस्</string>
    <string name="cancel">रद्द गर्नुहोस्</string>
    <string name="delete">हटाउनुहोस्</string>
    <string name="have_you_taken">के तपाईंले आफ्नो औषधि लिनुभयो?</string>
    <string name="reminders">रिमाइन्डर</string>
    <string name="slide_to_stop">बन्द गर्न स्लाइड गर्नुहोस्</string>
    <string name="stock_remaining">बाँकी स्टक</string>
    <string name="reminder_times">रिमाइन्डर समयहरू</string>
    <string name="reminder_time_n">समय %1$d</string>
    <string name="info">जानकारी</string>
    <string name="full_screen_intent_required">रिमाइन्डर पूर्ण स्क्रिनमा देखाउन अनुमति आवश्यक छ</string>
    <string name="overlay_required">लक नभएको अवस्थामा रिमाइन्डर देखाउन \"अरू एपहरूमा देखाउने\" अनुमति दिनुहोस्</string>
    <string name="medicine_type">औषधिको प्रकार</string>
    <string name="medicine_details">औषधिको विवरण</string>
    <string name="hello_greeting">नमस्ते 🙏</string>
    <string name="your_medicines">तपाईंका औषधिहरू</string>
    <string name="total_medicines">कुल औषधि</string>
    <string name="low_stock">कम स्टक</string>
    <string name="empty_medicines">अहिले कुनै औषधि छैन</string>
    <string name="empty_medicines_hint">तल थिचेर औषधि थप्न सक्नुहुन्छ</string>
    <string name="add_photo">तस्बिर थप्नुहोस्</string>
    <string name="change_photo">तस्बिर परिवर्तन गर्नुहोस्</string>
    <string name="medicine_photo">औषधिको तस्बिर</string>
    <string name="photo_source">तस्बिरको स्रोत</string>
    <string name="take_photo">तस्बिर खिच्नुहोस्</string>
    <string name="choose_from_gallery">ग्यालरीबाट छान्नुहोस्</string>
    <string name="repeat">दोहोर्याउने</string>
    <string name="repeat_hint">दिन छान्नुहोस् (कुनै नछाने एक पटक मात्र)</string>
    <string name="active_label">सक्रिय</string>
    <string name="active_hint">रिमाइन्डर पठाउने</string>
    <string name="paused">रोकिएको</string>
    <string-array name="medicine_types">
        <item>ट्याब्लेट</item>
        <item>लिक्विड</item>
    </string-array>
    <string-array name="dosage_units">
        <item>g</item>
        <item>mg</item>
        <item>mcg</item>
        <item>µg</item>
        <item>IU</item>
        <item>mL</item>
        <item>cc</item>
        <item>gtt</item>
    </string-array>
    <string name="dosage_unit">इकाई</string>
    <string name="schedule_icon">🔁</string>
    <string name="every_day">हरेक दिन</string>
    <string name="one_time">एक पटक</string>
    <string name="stock">Stock</string>
    <string name="pills">pills</string>
    <string name="ml">ml</string>
    <string name="days_left">Days Left</string>
    <string name="days">days</string>
    <string name="stock_nepali">स्टक</string>
    <string name="pills_nepali">चक्कीहरू</string>
    <string name="ml_nepali">मिलिलिटर</string>
    <string name="days_left_nepali">बाँकी दिनहरू</string>
    <string name="days_nepali">दिनहरू</string>
    <string name="error_name_required">औषधिको नाम आवश्यक छ</string>
    <string name="error_dosage_required">मात्रा आवश्यक छ</string>
    <string name="error_type_required">औषधिको प्रकार चयन गर्नुहोस्</string>
    <string name="error_stock_required">कुल स्टक आवश्यक छ</string>
    <string name="error_stock_invalid">कुल स्टक शून्य भन्दा ठूलो हुनुपर्छ</string>
    <string name="error_stock_number">मान्य संख्या प्रविष्ट गर्नुहोस्</string>
    <string name="error_consumption_required">दैनिक खपत आवश्यक छ</string>
    <string name="error_consumption_invalid">दैनिक खपत शून्य भन्दा ठूलो हुनुपर्छ</string>
    <string name="error_consumption_number">मान्य संख्या प्रविष्ट गर्नुहोस्</string>
    <string name="error_time_invalid">रिमाइन्डर समय हालको समयभन्दा कम्तिमा १ मिनेट पछिको हुनुपर्छ</string>
    <string name="developer_credit">Developed by Ashish Gyawali</string>
    <string name="developer_linkedin">https://www.linkedin.com/in/ashishgyawali15/</string>
    <string name="fab_add_medicine_menu">औषधी थप्नुहोस</string>
    <string name="fab_buy_medicine_menu">औषधी खरिद गर्नुहोस्</string>
    <string name="medicine_calculator_title">औषधी खरिद सूची</string>
    <string name="medicine_calculator_intro">सक्रिय औषधिहरूमध्ये छानेर कति दिनको लागि किन्ने सूची बनाउनुहोस्।</string>
    <string name="step_select_medicines">१. औषधि छान्नुहोस्</string>
    <string name="step_input_days">२. दिन प्रविष्ट गर्नुहोस्</string>
    <string name="step_results">३. नतिजा</string>
    <string name="select_all_medicines">सबै छान्नुहोस्</string>
    <string name="active_medicine_count">सक्रिय औषधिहरू: %1$d</string>
    <string name="no_active_medicines">अहिले कुनै सक्रिय औषधि भेटिएन। पहिले औषधि थप्नुहोस् वा रोकिएको औषधि फेरि सक्रिय गर्नुहोस्।</string>
    <string name="days_for_purchase">कति दिनको लागि?</string>
    <string name="days_hint">जस्तै: 30, 60, 90</string>
    <string name="calculate_purchase">हिसाब गर्नुहोस्</string>
    <string name="select_medicine_error">कृपया कम्तीमा एउटा औषधि छान्नुहोस्</string>
    <string name="days_required_error">कृपया दिनको संख्या लेख्नुहोस्</string>
    <string name="days_invalid_error">कृपया मान्य दिन संख्या लेख्नुहोस्</string>
    <string name="calculation_summary">खरिद सारांश</string>
    <string name="calculation_summary_for_days">%1$d दिनको लागि तयार गरिएको सूची</string>
    <string name="generated_on">तयार गरिएको मिति: %1$s</string>
    <string name="current_stock_label">हालको स्टक</string>
    <string name="daily_use_label">दैनिक खपत</string>
    <string name="total_required_label">जम्मा चाहिने</string>
    <string name="to_buy_label">किन्नुपर्ने</string>
    <string name="stock_enough_label">हालको स्टक पर्याप्त छ</string>
    <string name="copy_as_text">टेक्स्ट कपी गर्नुहोस्</string>
    <string name="generate_jpeg">JPEG बनाउनुहोस्</string>
    <string name="generate_pdf">PDF बनाउनुहोस्</string>
    <string name="copied_to_clipboard">सूची क्लिपबोर्डमा कपी गरियो</string>
    <string name="share_jpeg">JPEG शेयर गर्नुहोस्</string>
    <string name="share_pdf">PDF शेयर गर्नुहोस्</string>
    <string name="export_failed">फाइल तयार गर्न असफल भयो</string>
    <string name="unit_per_day">%1$s प्रति दिन</string>
    <string name="summary_medicine_count_line">सूचीमा %1$d औषधि छन्</string>
    <string name="share_sheet_title">शेयर गर्नुहोस्</string>
</resources>
